--- a/stylex.css
+++ b/stylex.css
@@ -89,7 +89,7 @@
 }
 .custom .button{
     position: absolute;
-    background: url(abxy.png);
+    background: url(abxy1.png);
     width: 48px;
     height: 48px;
 }
